--- a/html/demo-page.html
+++ b/html/demo-page.html
@@ -9,6 +9,9 @@
       #container {
         position: fixed;
         top: 10px;
+        height: 100%;
+        overflow: auto;
+        padding-bottom: 20px;
       }
 
       .demo-box, .small-demo-box {
@@ -54,9 +57,6 @@
 
       <div id="wheel-position" class="demo-box">use the mouse wheel!</div>
       <div id="scroll-position" class="demo-box">scroll the document!</div>
-
-      <br><br>
-
       <div id="mouse-move" class="demo-box">try mousemove!</div>
       <div id="mouse-over" class="demo-box">try mouseover!</div>
 
@@ -64,9 +64,6 @@
 
       <div id="setIntervalFunction" class="small-demo-box">interval function...</div>
       <div id="setIntervalString" class="small-demo-box">interval string...</div>
-
-      <br><br>
-
       <div id="setTimeoutFunction" class="small-demo-box">timeout function...</div>
       <div id="setTimeoutString" class="small-demo-box">timeout string...</div>
 
@@ -74,10 +71,23 @@
 
       <div id="ajaxContent" class="small-demo-box">XMLHttpRequest request...</div>
       <div id="fetchContent" class="small-demo-box">fetch request...</div>
+      <div id="fetchContentAwait" class="small-demo-box">await fetch request...</div>
     </div>
 
     <script type="text/javascript">
       (function() { setTimeout(function() {
+
+        var timeout_id = setTimeout(function() {
+          alert('clearTimeout failed!');
+        }, 1000);
+
+        clearTimeout(timeout_id);
+
+        var interval_id = setInterval(function() {
+          alert('clearInterval failed!');
+        }, 1500);
+
+        clearInterval(interval_id);
 
         var request = new XMLHttpRequest();
 
@@ -92,7 +102,7 @@
             document.getElementById('ajaxContent').innerHTML = current_time() + '<br>XMLHttp: ' + request.responseText;
           }
         }
-        request.open('GET', 'demo-ajax.txt', true);
+        request.open('GET', 'external-content.txt', true);
         request.send();
 
         setInterval(function(param) {
@@ -183,11 +193,19 @@
           alert(current_time() + ' clicked!');
         });
 
-        fetch('demo-ajax.txt').then(function(response) {
+        fetch('external-content.txt').then(function(response) {
           return response.text();
         }).then(function(text) {
           document.getElementById('fetchContent').innerHTML = current_time() + '<br>fetch: ' + text;
         });
+
+        const my_request = async () => {
+          const response = await fetch('external-content.txt');
+          const text = await response.text();
+          document.getElementById('fetchContentAwait').innerHTML = current_time() + '<br>await fetch: ' + text;
+        };
+
+        my_request();
 
       }, 100); })();
     </script>
