improve text legibility

--- a/html/demo-page.html
+++ b/html/demo-page.html
@@ -1,7 +1,13 @@
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Demo</title>
     <style type="text/css">
+      html, body {
+        font-family: 'Open Sans', arial, sans-serif;
+        text-rendering: optimizeLegibility;
+      }
+
       body {
         height: 200%;
       }
@@ -21,7 +27,7 @@
         text-align: center;
         width: 160px;
         height: 30px;
-        font-size: 14px;
+        font-size: 12px;
         margin-right: 6px;
         vertical-align: top;
       }
