--- a/html/popup/popup.html
+++ b/html/popup/popup.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="../../css/popup/popup.css">
     <script src="../../js/vendor/jquery/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
