loading screen flow

--- a/html/popup/popup.html
+++ b/html/popup/popup.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="../../css/popup/popup.css">
-    <script src="../../js/vendor/jquery/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
+    <script src="../../js/vendor/jquery/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="../../js/vendor/mustachejs/mustache.min.js" type="text/javascript"></script>
     <script src="../../js/vendor/tippyjs/tippy.all.min.js" type="text/javascript"></script>
     <script src="../../js/utils/colors.js" type="text/javascript"></script>
@@ -13,6 +13,7 @@
   <body>
     <div>
       <a href="" id="help-link" target="_blank"></a>
+      <div id="loading"></div>
       <div id="options-container"></div>
       <div id="counters-container"></div>
     </div>
