--- a/html/interface-sample.html
+++ b/html/interface-sample.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Luminous: JavaScript events interceptor</title>
+    <title>Luminous: JavaScript events blocker</title>
     <link rel="stylesheet" type="text/css" href="../css/popup/popup.css">
   </head>
   <body>
