--- a/html/popup/popup.html
+++ b/html/popup/popup.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div>
-      <a href="" id="help-link" target="_blank"></a>
+      <a href="https://github.com/gbaptista/luminous/releases/tag/0.0.4" id="version" target="_blank">0.0.4</a><a href="" id="help-link" target="_blank"></a>
       <div id="loading"></div>
       <div id="options-container"></div>
       <div id="counters-container"></div>
