new sttings link

--- a/html/popup/popup.html
+++ b/html/popup/popup.html
@@ -3,16 +3,19 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="../../css/popup/popup.css">
-    <script src="../../js/vendor/jquery/jquery-3.3.1.min.js" type="text/javascript"></script>
-    <script src="../../js/vendor/mustachejs/mustache.min.js" type="text/javascript"></script>
-    <script src="../../js/vendor/tippyjs/tippy.all.min.js" type="text/javascript"></script>
+    <script src="../../vendor/jquery/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="../../vendor/mustachejs/mustache.min.js" type="text/javascript"></script>
+    <script src="../../vendor/tippyjs/tippy.all.min.js" type="text/javascript"></script>
     <script src="../../js/utils/colors.js" type="text/javascript"></script>
     <script src="../../js/utils/numbers.js" type="text/javascript"></script>
+    <script src="../../js/utils/load_template.js" type="text/javascript"></script>
     <script src="../../js/popup/popup.js" type="text/javascript"></script>
   </head>
   <body>
     <div>
-      <a href="https://github.com/gbaptista/luminous/releases/tag/0.0.5" id="version" target="_blank">0.0.5</a><a href="" id="help-link" target="_blank"></a>
+      <a href="https://github.com/gbaptista/luminous/releases/tag/0.0.5" id="version" target="_blank">0.0.5</a>
+      <a href=" " id="help-link" class="top-link" target="_blank"></a>
+      <a href="../settings/advanced.html" id="settings-link" class="top-link" target="_blank"></a>
       <div id="loading"></div>
       <div id="options-container"></div>
       <div id="counters-container"></div>
