translations for settings pages

--- a/html/settings/stored-data/sync.html
+++ b/html/settings/stored-data/sync.html
@@ -14,11 +14,14 @@
     <header></header>
     <nav></nav>
 
-    <h2>Stored Data: Sync</h2>
+    <h2 class="locale" data-locale="settingsStoredDataSyncTitle"></h2>
 
-    Read more about <a target="_blank" href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions/API/storage/sync">storage.sync</a>.
+    <span class="locale" data-locale="settingsReadMoreText"></span>
+    <a target="_blank" class="locale-url" data-locale-url="settingsStorageSyncMdnHref" href="">storage.sync</a>.
+
     <br><br>
-    <span id="used"></span> | <button id="clear">clear all</button>
+
+    <span id="used"></span> | <button id="clear" class="locale" data-locale="settingsClearAllButtonText"></button>
 
     <div class="options"></div>
   </body>
