--- a/html/settings/advanced.html
+++ b/html/settings/advanced.html
@@ -14,7 +14,7 @@
     <header></header>
     <nav></nav>
 
-    <h2>Advanced</h2>
+    <h2 class="locale" data-locale="settingsAdvancedTitle"></h2>
 
     <div id="form"></div>
   </body>
