--- a/html/settings/stored-data/local.html
+++ b/html/settings/stored-data/local.html
@@ -14,11 +14,14 @@
     <header></header>
     <nav></nav>
 
-    <h2>Stored Data: Local</h2>
+    <h2 class="locale" data-locale="settingsStoredDataLocalTitle"></h2>
 
-    Read more about <a target="_blank" href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions/API/storage/local">storage.local</a>.
+    <span class="locale" data-locale="settingsReadMoreText"></span>
+    <a target="_blank" class="locale-url" data-locale-url="settingsStorageLocalMdnHref" href="">storage.local</a>.
+
     <br><br>
-    <span id="used"></span> | <button id="clear">clear all</button>
+
+    <span id="used"></span> | <button id="clear" class="locale" data-locale="settingsClearAllButtonText"></button>
 
     <div class="tabs"></div>
   </body>
