settings pages issues

--- a/html/settings/stored-data/sync.html
+++ b/html/settings/stored-data/sync.html
@@ -21,7 +21,7 @@
 
     <br><br>
 
-    <span id="used"></span> | <button id="clear" class="locale" data-locale="settingsClearAllButtonText"></button>
+    <span id="used"></span><button id="clear" class="locale" data-locale="settingsClearAllButtonText"></button>
 
     <div class="options"></div>
   </body>
