--- a/html/interface-sample.html
+++ b/html/interface-sample.html
@@ -16,7 +16,7 @@
       </label>
   <br>
   <label>
-    <input type="checkbox" name="show_listener_functions" value="true"> show intercepted code details
+    <input type="checkbox" name="show_code_details" value="true"> show intercepted code details
   </label>
 </form>
 </div>
