--- a/html/popup/popup.html
+++ b/html/popup/popup.html
@@ -15,7 +15,7 @@
     <div>
       <a href="https://github.com/gbaptista/luminous/releases/tag/0.0.6" id="version" target="_blank">0.0.6</a>
       <a href=" " id="help-link" class="top-link" target="_blank"></a>
-      <a href="../settings/advanced.html" id="settings-link" class="top-link" target="_blank"></a>
+      <a href="../settings/injection/enabled.html" id="settings-link" class="top-link" target="_blank"></a>
       <div id="loading"></div>
       <div id="options-container"></div>
       <div id="counters-container"></div>
