--- a/html/settings/stored-data/local.html
+++ b/html/settings/stored-data/local.html
@@ -1,7 +1,13 @@
+<!doctype html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title></title>
+
+    <link rel="stylesheet" type="text/css" href="../../../vendor/bootstrap/bootstrap.min.css">
+
     <link rel="stylesheet" type="text/css" href="../../../css/settings/settings.css">
     <script src="../../../vendor/jquery/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="../../../vendor/mustachejs/mustache.min.js" type="text/javascript"></script>
@@ -11,18 +17,24 @@
   </head>
   <body>
     <div id="loading"></div>
-    <header></header>
-    <nav></nav>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-3">
+          <nav class="navbar"></nav>
+        </div>
+        <div class="col-8 settings-content">
+          <div class="alert alert-warning" role="alert">
+            <span class="locale" data-locale="settingsReadMoreText"></span>
+            <a target="_blank" class="locale-url alert-link" data-locale-url="settingsStorageLocalMdnHref" href="">storage.local</a>.
+          </div>
 
-    <h2 class="locale" data-locale="settingsStoredDataLocalTitle"></h2>
+          <span id="used"></span><button id="clear" class="locale btn btn-warning" data-locale="settingsClearAllButtonText"></button>
 
-    <span class="locale" data-locale="settingsReadMoreText"></span>
-    <a target="_blank" class="locale-url" data-locale-url="settingsStorageLocalMdnHref" href="">storage.local</a>.
-
-    <br><br>
-
-    <span id="used"></span><button id="clear" class="locale" data-locale="settingsClearAllButtonText"></button>
-
-    <div class="tabs"></div>
+          <br><br>
+          
+          <div class="tabs"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
