--- a/html/demo-page.html
+++ b/html/demo-page.html
@@ -172,7 +172,7 @@
         });
 
         document.addEventListener('wheel', function() {
-          document.getElementById('wheel-position').innerHTML = current_time() + ' whell detected: ' + document.body.scrollTop;
+          document.getElementById('wheel-position').innerHTML = current_time() + ' wheel detected: ' + document.body.scrollTop;
         });
 
         document.addEventListener('scroll', function() {
