remove or add domain for custom rules

--- a/html/settings/rules/per-domain.html
+++ b/html/settings/rules/per-domain.html
@@ -29,6 +29,8 @@
             <a target="_blank" class="locale locale-url alert-link" data-locale-url="settingsJavaScriptEventsHref" data-locale="settingsJavaScriptEventsText" href=""></a>.
           </div>
           <div class="search"></div>
+          <div class="form"></div>
+          <br>
           <div class="rules"></div>
           <div class="nothing-found locale" data-locale="settingsNothingFoundText"></div>
         </div>
