--- a/html/settings/stored-data/sync.html
+++ b/html/settings/stored-data/sync.html
@@ -28,7 +28,12 @@
             <a target="_blank" class="locale-url alert-link" data-locale-url="settingsStorageSyncMdnHref" href="">storage.sync</a>.
           </div>
 
-          <span id="used"></span><button id="clear" class="locale btn btn-warning" data-locale="settingsResetToDefaultText"></button>
+          <span id="used"></span>
+          <button id="reset" class="locale btn btn-warning" data-locale="settingsResetToDefaultText"></button>
+          <!-- <for-debugging-purposes-only> -->
+            |
+            <button id="clear" class="locale btn btn-danger" data-locale="settingsClearAllButtonText"></button>
+          <!-- </for-debugging-purposes-only> -->
           <br><br>
           <div class="options"></div>
         </div>
