block geolocation apis

--- a/html/demo-page.html
+++ b/html/demo-page.html
@@ -80,6 +80,11 @@
       <div id="fetchContentAwait" class="small-demo-box">await fetch request...</div>
 
       <div id="removeEventListener" class="small-demo-box">removeEventListener()</div>
+
+      <br><br>
+
+      <div id="getCurrentPosition" class="small-demo-box">getCurrentPosition()</div>
+      <div id="watchPosition" class="small-demo-box">watchPosition()</div>
     </div>
 
     <script type="text/javascript">
@@ -92,6 +97,14 @@
       );
 
       (function() { setTimeout(function() {
+
+        navigator.geolocation.getCurrentPosition(function(pos) {
+          document.getElementById('getCurrentPosition').innerHTML = 'geolocation.getCurrentPosition' + '<br>' + pos.coords.latitude.toFixed(7) + ' | ' + pos.coords.longitude.toFixed(7);
+        }, undefined, { enableHighAccuracy: true });
+
+        navigator.geolocation.watchPosition(function(pos) {
+          document.getElementById('watchPosition').innerHTML = 'geolocation.watchPosition' + '<br>' + pos.coords.latitude.toFixed(7) + ' | ' + pos.coords.longitude.toFixed(7);
+        }, undefined, { enableHighAccuracy: true });
 
         var timeout_id = setTimeout(function() {
           alert('clearTimeout failed!');
@@ -239,7 +252,7 @@
 
         my_request();
 
-      }, 100); })();
+      }, 500); })();
     </script>
   </body>
 </html>
