--- a/html/settings/reports/charts.html
+++ b/html/settings/reports/charts.html
@@ -27,17 +27,18 @@
 
           <div class="alert alert-warning" role="alert">
             <span class="locale" data-locale="settingsReadMoreText"></span>
-            <a target="_blank" class="locale-url alert-link" data-locale-url="settingsStorageSyncMdnHref" href="">IndexedDB API</a>.
+            <a target="_blank" class="locale-url alert-link" data-locale-url="settingsIndexedDbMdnHref" href="">IndexedDB</a>.
           </div>
 
-          <span id="used"></span><button id="clear" class="locale btn btn-warning" data-locale="settingsClearAllButtonText"></button>
+          <span id="used"></span><button id="clear" class="locale btn btn-warning" data-locale="settingsReportClearAllButtonText"></button>
           |
           <div id="form" class="form-data-collection"></div>
           <br><br>
 
           <div class="reports">
-            <div id="per-code"></div>
             <div id="per-domain"></div>
+            <div id="per-code"></div>
+            <div id="custom-domain"></div>
           </div>
         </div>
       </div>
