fix missing br class

--- a/html/interface-sample.html
+++ b/html/interface-sample.html
@@ -39,7 +39,7 @@
       zoom in
       <input type="checkbox" name="zoom_in" value="true">
     </label>
-    <br>
+    <br class="clear-floats">
     <label>
       show intercepted code details
       <input type="checkbox" name="show_code_details" value="true" checked="">
