--- a/html/settings/reports/charts.html
+++ b/html/settings/reports/charts.html
@@ -14,6 +14,7 @@
     <script src="../../../js/utils/load_template.js" type="text/javascript"></script>
     <script src="../../../js/settings/settings.js" type="text/javascript"></script>
     <script src="../../../vendor/dexiejs/dexie.js" type="text/javascript"></script>
+    <script src="../../../js/utils/numbers.js" type="text/javascript"></script>
     <script src="../../../js/settings/reports/charts.js" type="text/javascript"></script>
   </head>
   <body>
@@ -31,6 +32,7 @@
           </div>
 
           <span id="used"></span><button id="clear" class="locale btn btn-warning" data-locale="settingsReportClearAllButtonText"></button>
+          | <span class="locale" data-locale="sortByText">sort by</span>: <a href="?sort_by=calls" class="sort_by_calls locale" data-locale="sortByCallsText"></a> - <a href="?sort_by=execution_time" class="sort_by_execution_time locale" data-locale="sortByTimeText"></a>
           |
           <div id="form" class="form-data-collection"></div>
           <br><br>
