--- a/html/settings/reports/charts.html
+++ b/html/settings/reports/charts.html
@@ -14,6 +14,7 @@
     <script src="../../../js/utils/load_template.js" type="text/javascript"></script>
     <script src="../../../js/settings/settings.js" type="text/javascript"></script>
     <script src="../../../vendor/dexiejs/dexie.js" type="text/javascript"></script>
+    <script src="../../../js/helpers/indexed_db.js" type="text/javascript"></script>
     <script src="../../../js/utils/numbers.js" type="text/javascript"></script>
     <script src="../../../js/settings/reports/charts.js" type="text/javascript"></script>
   </head>
