new demos file structure

--- a/html/demos/iframes/index.html
+++ b/html/demos/iframes/index.html
@@ -11,9 +11,9 @@
   <body>
     localhost:300
     <br><br>
-    <iframe width="300" height="50" src="http://tracker:3000/html/demo-tracker.html"></iframe>
+    <iframe width="300" height="50" src="http://tracker:3000/html/demos/iframes/tracker.html"></iframe>
     <br>
-    <iframe width="300" height="120" src="http://cryptominer:3000/html/demo-cryptominer.html"></iframe>
+    <iframe width="300" height="120" src="http://cryptominer:3000/html/demos/iframes/cryptominer.html"></iframe>
   </body>
   <script type="text/javascript">
     (function() { setTimeout(function() {
