--- a/html/demos/interface/index.html
+++ b/html/demos/interface/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Luminous: JavaScript events blocker</title>
-    <link rel="stylesheet" type="text/css" href="../css/popup/popup.css">
+    <link rel="stylesheet" type="text/css" href="../../../css/popup/popup.css">
   </head>
   <body class="zoom-in">
     <div>
