--- a/html/demos/interception/iframe.html
+++ b/html/demos/interception/iframe.html
@@ -27,20 +27,22 @@
     <br>
     cookie leak: <code id="cookie">no</code>
     <br>
-    <span>main_1</span> blocked: <code id="blocked1">yes</code>
+    <span>iframe_1</span> blocked: <code id="blocked1">yes</code>
     <br>
-    <span>main_2</span> blocked: <code id="blocked2">yes</code>
+    <span>iframe_2</span> blocked: <code id="blocked2">yes</code>
     <br>
-    <iframe width="360" height="490" src="iframe.html"></iframe>
-    <iframe width="360" height="490" src="iframe.html"></iframe>
+    <iframe width="330" height="94" src="sub-iframe.html"></iframe>
+    <iframe width="330" height="94" src="sub-iframe.html"></iframe>
 
-    <iframe id="iframe-a" width="360" height="490"></iframe>
+    <iframe id="iframe-a" width="330" height="94"></iframe>
+    <iframe id="iframe-b" width="330" height="94"></iframe>
   </body>
   <script type="text/javascript">
     if(document.cookie) {
       document.getElementById('cookie').innerHTML = JSON.stringify(document.cookie);
       document.getElementById('cookie').setAttribute('style', 'color:red; font-weight:bold;');
     }
+
     var wait_from = setInterval(function() {
       var from = document.getElementById('luminous-options').getAttribute('data-from');
       if(from) {
@@ -48,14 +50,14 @@
         clearInterval(wait_from);
       }
     }, 100);
-
     setTimeout(function() {
       var c = document.createEvent('MouseEvents');
       c.initMouseEvent('click');
       a.dispatchEvent(c);
       b.dispatchEvent(c);
 
-      document.getElementById('iframe-a').setAttribute('src', 'iframe.html');
+      document.getElementById('iframe-a').setAttribute('src', 'sub-iframe.html');
+      document.getElementById('iframe-b').setAttribute('src', 'sub-iframe.html');
     }, 500);
   </script>
 </html>
