remove filter decoder

--- a/html/demos/interception/simple.html
+++ b/html/demos/interception/simple.html
@@ -1,4 +1,7 @@
 <script>
+  console.log('luminous-options:');
+  console.log(document.getElementById('luminous-options'));
+
   var a = document.createElement('a');
   a.addEventListener('click', function(_) { return 'first script'; });
   var c = document.createEvent('MouseEvents');
