--- a/html/demos/interception/index.html
+++ b/html/demos/interception/index.html
@@ -42,10 +42,13 @@
       document.getElementById('cookie').setAttribute('style', 'color:red; font-weight:bold;');
     }
     var wait_from = setInterval(function() {
-      var from = document.getElementById('luminous-options').getAttribute('data-from');
-      if(from) {
-        document.getElementById('injection').innerHTML = from;
-        clearInterval(wait_from);
+      var luminous_options = document.getElementById('luminous-options');
+      if(luminous_options) {
+        var from = luminous_options.getAttribute('data-from');
+        if(from) {
+          document.getElementById('injection').innerHTML = from;
+          clearInterval(wait_from);
+        }
       }
     }, 100);
 
