improve interception demo

--- a/html/demos/interception/iframe.html
+++ b/html/demos/interception/iframe.html
@@ -34,8 +34,8 @@
     <iframe width="330" height="94" src="sub-iframe.html"></iframe>
     <iframe width="330" height="94" src="sub-iframe.html"></iframe>
 
-    <iframe id="iframe-a" width="330" height="94"></iframe>
-    <iframe id="iframe-b" width="330" height="94"></iframe>
+    <iframe id="iframe-a" src="null.html" width="330" height="94"></iframe>
+    <iframe id="iframe-b" src="null.html" width="330" height="94"></iframe>
   </body>
   <script type="text/javascript">
     if(document.cookie) {
