--- a/html/demos/interception/index.html
+++ b/html/demos/interception/index.html
@@ -34,7 +34,7 @@
     <iframe width="360" height="490" src="iframe.html"></iframe>
     <iframe width="360" height="490" src="iframe.html"></iframe>
 
-    <iframe id="iframe-a" width="360" height="490"></iframe>
+    <iframe id="iframe-a" width="360" src="null.html" height="490"></iframe>
   </body>
   <script type="text/javascript">
     if(document.cookie) {
