improve regex filter

--- a/html/demos/interception/simple.html
+++ b/html/demos/interception/simple.html
@@ -1,3 +1,18 @@
+
+
+<!DOCTYPE
+
+
+        html
+
+  PUBLIC
+
+     "-//W3C//DTD XHTML 1.0 Transitional//EN"
+
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
+  
+>
+
 <script>
   var a = document.createElement('a');
   a.addEventListener('click', function(_) { return 'first script'; });
