--- a/html/popup/popup.html
+++ b/html/popup/popup.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="../../css/popup/popup.css">
-    <script src="../../vendor/jquery/jquery-3.3.1.min.js" type="text/javascript"></script>
-    <script src="../../vendor/mustachejs/mustache.min.js" type="text/javascript"></script>
-    <script src="../../vendor/tippyjs/tippy.all.min.js" type="text/javascript"></script>
+    <script src="../../vendor/jquery-3.4.1/jquery.min.js" type="text/javascript"></script>
+    <script src="../../vendor/mustachejs-3.1.0/mustache.min.js" type="text/javascript"></script>
+    <script src="../../vendor/popper-1.15.0/popper.min.js" type="text/javascript"></script>
+    <script src="../../vendor/tippyjs-4.3.5/index.all.min.js" type="text/javascript"></script>
     <script src="../../js/utils/colors.js" type="text/javascript"></script>
     <script src="../../js/utils/numbers.js" type="text/javascript"></script>
     <script src="../../js/utils/load_template.js" type="text/javascript"></script>
