--- a/html/settings/stored-data/local.html
+++ b/html/settings/stored-data/local.html
@@ -6,11 +6,11 @@
 
     <title></title>
 
-    <link rel="stylesheet" type="text/css" href="../../../vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../../vendor/bootstrap-4.3.1/bootstrap.min.css">
 
     <link rel="stylesheet" type="text/css" href="../../../css/settings/settings.css">
-    <script src="../../../vendor/jquery/jquery-3.3.1.min.js" type="text/javascript"></script>
-    <script src="../../../vendor/mustachejs/mustache.min.js" type="text/javascript"></script>
+    <script src="../../../vendor/jquery-3.4.1/jquery.min.js" type="text/javascript"></script>
+    <script src="../../../vendor/mustachejs-3.1.0/mustache.min.js" type="text/javascript"></script>
     <script src="../../../js/utils/load_template.js" type="text/javascript"></script>
     <script src="../../../js/settings/settings.js" type="text/javascript"></script>
     <script src="../../../js/settings/stored-data/local.js" type="text/javascript"></script>
@@ -31,7 +31,7 @@
           <span id="used"></span><button id="clear" class="locale btn btn-warning" data-locale="settingsClearAllButtonText"></button>
 
           <br><br>
-          
+
           <div class="tabs"></div>
         </div>
       </div>
